--- a/style.css
+++ b/style.css
@@ -186,3 +186,35 @@ footer a {
 .footer.white {
     background: radial-gradient(circle, rgba(9, 75, 121, 1) 0%, rgba(9, 124, 115, 1) 50%, rgba(11, 115, 136, 1) 100%);
 }
+
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+
+    .countries {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 700px) and (min-width: 350px) {
+
+    .nav h1 {
+        font-size: 1.3rem;
+    }
+
+    .countries {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .search-menu {
+        flex-direction: column;
+        gap: 1rem;
+    }
+}
+
+@media screen and (max-width: 1400px) and (min-width: 1000px) {
+
+    .countries {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
