--- a/style.css
+++ b/style.css
@@ -1,221 +1,219 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&display=swap');
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: 0;
+  padding: 0;
+  margin: 0;
+  box-sizing: 0;
 }
 
 body {
-    font-family: "Nunito Sans";
-    background-color: #202c37;
-    margin: auto;
-    border: 1px solid black;
+  font-family: "Be Vietnam Pro";
+  background-color: #202c37;
+  margin: auto;
+  border: 1px solid black;
 }
 
 nav {
-    max-width: 1440px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    color: #ffffff;
-    background-color: #2b3945;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  max-width: 1440px;
+  margin: 1rem auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #2b3945;
+  border-radius: 24px;
+  box-shadow: 0 0 10px #00000080;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+nav h1 {
+  font-size: 2rem;
+  text-indent: 1rem;
 }
 
 .dark-mode {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .dark-mode button {
-    border: none;
-    cursor: pointer;
-    font-family: "Nunito Sans";
-    font-size: 1rem;
-    background-color: transparent;
-    color: #ffffff;
-    padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-family: "Be Vietnam Pro";
+  font-size: .9rem;
+  background-color: transparent;
+  padding: 10px;
 }
 
 .search-menu {
-    max-width: 1440px;
-    display: flex;
-    margin: 0 auto;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem;
+  max-width: 1440px;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem;
 }
 
 .search-bar {
-    background-color: #ffffff;
-    width: 20rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #2b3945;
-    border: none;
-    border-radius: 7px;
-    box-shadow: 1px 1px 10px #0000007a;
+  background-color: #ffffff;
+  padding-right: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #2b3945;
+  border: none;
+  border-radius: 24px;
+  box-shadow: 1px 1px 10px #0000007a;
+}
+
+.search-bar div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 #search-input {
-    width: 100%;
-    padding: .6rem;
-    border: none;
-    border-radius: 7px;
-    background-color: #2b3945;
+  padding: .1rem;
+  border: none;
+  border-radius: 24px;
+  background-color: #2b3945;
 }
 
 #search-input:focus,
 #search-input:not(:focus) {
-    color: white;
-    outline: none;
+  color: white;
+  outline: none;
 }
 
 #search-input:focus::placeholder {
-    font-size: 0;
+  font-size: 0;
 }
 
 #search-input::placeholder {
-    color: #ffffff;
-    font-size: .9rem;
+  color: #ffffff;
+  font-size: .9rem;
 }
 
 .search-glass {
-    padding: .6rem;
-    margin-left: .8rem;
-    margin-top: .2rem;
+  padding: .6rem;
+  margin-left: .8rem;
+  margin-top: .2rem;
 }
 
 #select-region {
-    padding: .8rem;
-    width: 12rem;
-    font-size: .9rem;
-    cursor: pointer;
-    border-radius: 7px;
-    background-color: #2b3945;
-    color: #ffffff;
-    border: none;
-    box-shadow: 1px 1px 10px #00000080;
+  padding: .8rem;
+  width: 12rem;
+  font-size: .9rem;
+  cursor: pointer;
+  border-radius: 7px;
+  background-color: #2b3945;
+  color: #ffffff;
+  border: none;
+  border-radius: 24px;
+  box-shadow: 1px 1px 10px #00000080;
 }
 
 .countries {
-    max-width: 1440px;
-    justify-items: center;
-    margin: 50px auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    row-gap: 40px;
+  max-width: 1440px;
+  justify-items: center;
+  margin: 50px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
 }
 
 .country {
-    width: 320px;
-    height: 400px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    box-shadow: 1px 1px 10px #00000080;
+  width: 320px;
+  height: fit-content;
+  background-color: #2b3945;
+  border-radius: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+}
+
+.country.white {
+  background-color: #ffffff7e;
 }
 
 .country img {
-    height: 200px;
-    width: 320px;
+  height: 200px;
+  width: 320px;
+  border-radius: 24px 24px 0 0;
 }
 
 .country-info {
-    margin: 1rem;
-    color: #ffffff;
-    text-indent: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.country-info p {
-    padding-bottom: .2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: .5rem;
+  padding: 1.5rem;
+  color: #ffffff;
 }
 
 body.white {
-    background-color: #b3b3b3cc;
+  background-color: #b3b3b3cc;
 }
 
 .nav.white {
-    background-color: #dadadacc;
-    color: black;
-    border: none;
+  background-color: #dadadacc;
+  color: black;
+  border: none;
 }
 
 #search-input.white {
-    background-color: #fafafa;
-    color: black;
+  background-color: #fafafa;
+  color: black;
 }
 
 #search-input.white::placeholder {
-    color: black;
+  color: black;
+}
+
+#search-delete {
+  cursor: pointer;
 }
 
 #select-region.white {
-    background-color: #fafafa;
-    color: rgb(0, 0, 0);
+  background-color: #fafafa;
+  color: rgb(0, 0, 0);
 }
 
 .search-bar.white {
-    background-color: white;
+  background-color: white;
 }
 
 .country-info.white {
-    color: black;
+  color: black;
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    padding: .5rem;
-    background-color: #2b3945;
-    text-align: center;
-    width: 100%;
+  position: fixed;
+  bottom: 0;
+  padding: .5rem;
+  background-color: #2b3945;
+  text-align: center;
+  width: 100%;
 }
 
 footer a {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .footer.white {
-    background: radial-gradient(circle, rgba(9, 75, 121, 1) 0%, rgba(9, 124, 115, 1) 50%, rgba(11, 115, 136, 1) 100%);
+  background: radial-gradient(circle, rgba(9, 75, 121, 1) 0%, rgba(9, 124, 115, 1) 50%, rgba(11, 115, 136, 1) 100%);
 }
 
-@media screen and (max-width: 1000px) and (min-width: 700px) {
+@media screen and (max-width: 762px) {
 
-    .countries {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-}
+  .nav h1 {
+    font-size: 1.6rem;
+  }
 
-@media screen and (max-width: 700px) and (min-width: 350px) {
-
-    .nav h1 {
-        font-size: 1.3rem;
-    }
-
-    .countries {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
-    .search-menu {
-        flex-direction: column;
-        gap: 1rem;
-    }
-}
-
-@media screen and (max-width: 1400px) and (min-width: 1000px) {
-
-    .countries {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+  .search-menu {
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
